tests/org.eclipse.php.core.tests/workspace/errors/php53/unfinishedMethodDecl1.pdtt
--TEST--
Test unfinished method declaration error reporting
--FILE--
<?php
function foo() {
?>
--EXPECT--
[line=4, start=26, end=29] syntax error, unexpected 'EOF'